--- a/admin.html
+++ b/admin.html
@@ -30,7 +30,7 @@
   </div>
 
   <div class="container-fluid  d-flex " style="margin-top: 10%;">
-    <div class="card text-white bg-primary mb-3" style="width:15%; margin: auto;">
+    <!-- <div class="card text-white bg-primary mb-3" style="width:15%; margin: auto;">
       <div class="card-header" style="margin: auto;"></div>
       <div class="card-body">
         <h5 class="card-title" style="text-align: center;">Manage Registrations</h5>
@@ -39,7 +39,7 @@
               style="font-weight:600;">Click
               Here</button></a></p>
       </div>
-    </div>
+    </div> -->
     <div class="card text-white bg-secondary mb-3" style="width:15%;margin: auto">
       <div class="card-header" style="margin: auto;"></div>
       <div class="card-body">
