--- a/login.html
+++ b/login.html
@@ -31,8 +31,8 @@
       <br><br>
       <input type="submit" name="log" id="log" value="Log In Here" onclick="return pageRedirect()">
       <br><br>
-      <input type="checkbox" id="check">
-      <span>Remember me</span>
+      <!-- <input type="checkbox" id="check">
+      <span>Remember me</span> -->
       <br><br>
       <a style="color: aliceblue;" href="#">Forgot Password?</a>
     </form>
