--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   </head>
   <body>
     <div class="header">
-      <a href="#default" class="logo"> &nbsp; ABC ENGLISH MEDIUM SCHOOL</a>
+      <img class="logoimg" src="logo.png">
+      <!-- <a href="#default" class="logo"> &nbsp; ABC ENGLISH MEDIUM SCHOOL</a> -->
       <div class="header-right">
         <a class="active" href="#home">Home</a>
         <a href="login.html">Login</a>
@@ -20,8 +21,9 @@
         <a href="#about">About</a>
       </div>
     </div>
-    <anime>
+    
+    <!-- <anime>
       <p  class="line-1 anim-typewriter" style="text-align:center">To chaliye shuru krte hai....</p>
-    </anime>
+    </anime> -->
   </body>
 </html>
