--- a/admin.html
+++ b/admin.html
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-  <div class="header">
-    <a href="#default" class="logo"> &nbsp;Welcome Admin...</a>
+  <div class="header" style="border-radius:8px ; background-color: rgb(246, 239, 230);">
+    <a class="logo"> &nbsp;Welcome Admin...</a>
     <div class="header-right">
       <a type="button" class="fademet">My Profile</a>
       <a class="active" href="login.html">Logout</a>
@@ -29,7 +29,7 @@
     </ul>
   </div>
 
-  <div class="container-fluid  d-flex " style="margin-top: 10%;">
+  <div class="container-fluid  d-flex " style="margin-top: 12%;">
     <!-- <div class="card text-white bg-primary mb-3" style="width:15%; margin: auto;">
       <div class="card-header" style="margin: auto;"></div>
       <div class="card-body">
@@ -40,34 +40,31 @@
               Here</button></a></p>
       </div>
     </div> -->
-    <div class="card text-white bg-secondary mb-3" style="width:15%;margin: auto">
+    <div class="card text-white bg-info mb-3" style="width:25%; height:200px; margin: auto">
       <div class="card-header" style="margin: auto;"></div>
       <div class="card-body">
-        <h5 class="card-title" style="text-align: center;">Manage Teachers</h5>
-        <br>
-        <p class="card-text" style="text-align: center;"><a href="#"><button type="button" class="btn btn-warning"
-              style="font-weight:600;">Click
-              Here</button></a></p>
-      </div>
-    </div>
-    <div class="card text-white bg-success mb-3" style="width:15%; margin: auto">
-      <div class="card-header" style="margin: auto;"></div>
-      <div class="card-body">
-        <h5 class="card-title" style="text-align: center;">Manage Classes</h5>
-        <br>
-        <p class="card-text" style="text-align: center;"><a href="#"><button type="button" class="btn btn-primary"
-              style="font-weight:600;">Click
-              Here</button></a></p>
-      </div>
-    </div>
-    <div class="card text-white bg-info mb-3" style="width:15%; margin: auto">
-      <div class="card-header" style="margin: auto;"></div>
-      <div class="card-body">
-        <h5 class="card-title" style="text-align: center;">Manage Students</h5>
-        <br>
+        <h5 class="card-title" style="text-align:center; color: black; font-size: 25px;font-weight:700;">Manage Teachers</h5>
+        <br><br><br>
         <p class="card-text" style="text-align: center;"><a href="#"><button type="button" class="btn btn-dark"
-              style="font-weight:600;">Click
-              Here</button></a></p>
+              style="font-weight:600;">Click Here</button></a></p>
+      </div>
+    </div>
+    <div class="card text-white bg-success mb-3" style="width:25%; height:200px; margin: auto">
+      <div class="card-header" style="margin: auto;"></div>
+      <div class="card-body">
+        <h5 class="card-title" style="text-align: center;font-size: 25px;font-weight:700;">Manage Classes</h5>
+        <br><br><br>
+        <p class="card-text" style="text-align: center;"><a href="#"><button type="button" class="btn btn-primary"
+              style="font-weight:600;">Click Here</button></a></p>
+      </div>
+    </div>
+    <div class="card text-white bg-info mb-3" style="width:25%; height:200px; margin: auto">
+      <div class="card-header" style="margin: auto;"></div>
+      <div class="card-body">
+        <h5 class="card-title" style="text-align:center; color: black; font-size: 25px;font-weight:700;">Manage Students</h5>
+        <br><br><br>
+        <p class="card-text" style="text-align: center;"><a href="#"><button type="button" class="btn btn-dark"
+              style="font-weight:600;">Click Here</button></a></p>
       </div>
     </div>
   </div>
