--- a/teacher.html
+++ b/teacher.html
@@ -30,29 +30,29 @@
   </div>
 
   <div class="container-fluid  d-flex " style="margin-top: 10%;">
-    <div class="card text-white bg-primary mb-3" style="width:15%; margin: auto;">
+    <div class="card text-white bg-body mb-3" style="width:22%; height:200px; margin: auto;">
       <div class="card-header" style="margin: auto;"></div>
       <div class="card-body">
-        <h5 class="card-title" style="text-align: center;">Add Marks</h5>
-        <br>
+        <h5 class="card-title" style="text-align: center; font-size:1.6em;">Add Marks</h5>
+        <br><br><br>
         <p class="card-text" style="text-align: center;"><a href="#"><button type="button" class="btn btn-danger" style="font-weight:600;">Click
               Here</button></a></p>
       </div>
     </div>
-    <div class="card text-white bg-secondary mb-3" style="width:15%;margin: auto">
+    <div class="card text-white bg-body mb-3" style="width:22%; height:200px; margin: auto">
       <div class="card-header" style="margin: auto;"></div>
       <div class="card-body">
-        <h5 class="card-title" style="text-align: center;">Add Notice</h5>
-        <br>
+        <h5 class="card-title" style="text-align: center; font-size:1.6em;">Add Notice</h5>
+        <br><br><br>
         <p class="card-text" style="text-align: center;"><a href="#"><button type="button" class="btn btn-warning" style="font-weight:600;">Click
               Here</button></a></p>
       </div>
     </div>
-    <div class="card text-white bg-success mb-3" style="width:15%; margin: auto">
+    <div class="card text-white bg-body mb-3" style="width:22%; height:200px; margin: auto">
       <div class="card-header" style="margin: auto;"></div>
       <div class="card-body">
-        <h5 class="card-title" style="text-align: center;">Manage Student</h5>
-        <br>
+        <h5 class="card-title" style="text-align: center; font-size:1.6em;">Manage Student</h5>
+        <br><br><br>
         <p class="card-text" style="text-align: center;"><a href="#"><button type="button" class="btn btn-primary" style="font-weight:600;">Click
               Here</button></a></p>
       </div>
