--- a/admin.html
+++ b/admin.html
@@ -1,36 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link href="style.css" rel="stylesheet" />
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="javascript.js"></script>
 
-<head>
+    <title>Admin</title>
+  </head>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link href="style.css" rel="stylesheet">
-  <script src="//code.jquery.com/jquery-1.10.2.js"></script>
-  <script src="javascript.js"></script>
-
-  <title>Admin</title>
-</head>
-
-<body>
-  <div class="header" style="border-radius:8px ; background-color: rgb(246, 239, 230);">
-    <a class="logo"> &nbsp;Welcome Admin...</a>
-    <div class="header-right">
-      <a type="button" class="fademet">My Profile</a>
-      <a class="active" href="login.html">Logout</a>
+  <body>
+    <div
+      class="header"
+      style="border-radius: 8px; background-color: rgb(246, 239, 230)"
+    >
+      <a class="logo"> &nbsp;Welcome Admin...</a>
+      <div class="header-right">
+        <a type="button" class="fademet">My Profile</a>
+        <a class="active" href="login.html">Logout</a>
+      </div>
     </div>
-  </div>
-  <div class="men_ex">
-    <ul>
-      <li><a href="#">Update Profile</a></li>
-      <li><a href="#">Change Password</a></li>
-    </ul>
-  </div>
+    <div class="men_ex">
+      <ul>
+        <li><a href="#">Update Profile</a></li>
+        <li><a href="#">Change Password</a></li>
+      </ul>
+    </div>
 
-  <div class="container-fluid  d-flex " style="margin-top: 12%;">
-    <!-- <div class="card text-white bg-primary mb-3" style="width:15%; margin: auto;">
+    <div class="container-fluid d-flex" style="margin-top: 12%">
+      <!-- <div class="card text-white bg-primary mb-3" style="width:15%; margin: auto;">
       <div class="card-header" style="margin: auto;"></div>
       <div class="card-body">
         <h5 class="card-title" style="text-align: center;">Manage Registrations</h5>
@@ -40,34 +45,94 @@
               Here</button></a></p>
       </div>
     </div> -->
-    <div class="card text-white bg-info mb-3" style="width:25%; height:200px; margin: auto">
-      <div class="card-header" style="margin: auto;"></div>
-      <div class="card-body">
-        <h5 class="card-title" style="text-align:center; color: black; font-size: 25px;font-weight:700;">Manage Teachers</h5>
-        <br><br><br>
-        <p class="card-text" style="text-align: center;"><a href="#"><button type="button" class="btn btn-dark"
-              style="font-weight:600;">Click Here</button></a></p>
+      <div
+        class="card text-white bg-info mb-3"
+        style="width: 25%; height: 200px; margin: auto"
+      >
+        <div class="card-header" style="margin: auto"></div>
+        <div class="card-body">
+          <h5
+            class="card-title"
+            style="
+              text-align: center;
+              color: black;
+              font-size: 25px;
+              font-weight: 700;
+            "
+          >
+            Manage Teachers
+          </h5>
+          <br /><br /><br />
+          <p class="card-text" style="text-align: center">
+            <a href="tdata.html"
+              ><button
+                type="button"
+                class="btn btn-dark"
+                style="font-weight: 600"
+              >
+                Click Here
+              </button></a
+            >
+          </p>
+        </div>
+      </div>
+      <div
+        class="card text-white bg-success mb-3"
+        style="width: 25%; height: 200px; margin: auto"
+      >
+        <div class="card-header" style="margin: auto"></div>
+        <div class="card-body">
+          <h5
+            class="card-title"
+            style="text-align: center; font-size: 25px; font-weight: 700"
+          >
+            Manage Classes
+          </h5>
+          <br /><br /><br />
+          <p class="card-text" style="text-align: center">
+            <a href="#"
+              ><button
+                type="button"
+                class="btn btn-primary"
+                style="font-weight: 600"
+              >
+                Click Here
+              </button></a
+            >
+          </p>
+        </div>
+      </div>
+      <div
+        class="card text-white bg-info mb-3"
+        style="width: 25%; height: 200px; margin: auto"
+      >
+        <div class="card-header" style="margin: auto"></div>
+        <div class="card-body">
+          <h5
+            class="card-title"
+            style="
+              text-align: center;
+              color: black;
+              font-size: 25px;
+              font-weight: 700;
+            "
+          >
+            Manage Students
+          </h5>
+          <br /><br /><br />
+          <p class="card-text" style="text-align: center">
+            <a href="sdata.html"
+              ><button
+                type="button"
+                class="btn btn-dark"
+                style="font-weight: 600"
+              >
+                Click Here
+              </button></a
+            >
+          </p>
+        </div>
       </div>
     </div>
-    <div class="card text-white bg-success mb-3" style="width:25%; height:200px; margin: auto">
-      <div class="card-header" style="margin: auto;"></div>
-      <div class="card-body">
-        <h5 class="card-title" style="text-align: center;font-size: 25px;font-weight:700;">Manage Classes</h5>
-        <br><br><br>
-        <p class="card-text" style="text-align: center;"><a href="#"><button type="button" class="btn btn-primary"
-              style="font-weight:600;">Click Here</button></a></p>
-      </div>
-    </div>
-    <div class="card text-white bg-info mb-3" style="width:25%; height:200px; margin: auto">
-      <div class="card-header" style="margin: auto;"></div>
-      <div class="card-body">
-        <h5 class="card-title" style="text-align:center; color: black; font-size: 25px;font-weight:700;">Manage Students</h5>
-        <br><br><br>
-        <p class="card-text" style="text-align: center;"><a href="#"><button type="button" class="btn btn-dark"
-              style="font-weight:600;">Click Here</button></a></p>
-      </div>
-    </div>
-  </div>
-</body>
-
+  </body>
 </html>
