--- a/login.html
+++ b/login.html
@@ -1,42 +1,64 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="javascript.js" type="text/javascript"></script>
+    <link href="style.css" rel="stylesheet" />
 
-<head>
+    <title>Login</title>
+  </head>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="javascript.js" type="text/javascript"></script>
-  <link href="style.css" rel="stylesheet">
-
-
-  <title>Login</title>
-</head>
-
-<body>
-  <div class="header">
-    <a href="#default" class="logo"> &nbsp; Login here...</a>
-    <div class="header-right">
-      <a class="active" href="index.html">Home</a>
+  <body>
+    <div class="header d-flex">
+      <a href="#default" class="logo"> &nbsp; Login here...</a>
+      <div class="header-right">
+        <a class="active" href="index.html">Home</a>
+      </div>
     </div>
-  </div><br><br>
-  <div class="login">
-    <form onsubmit="return validate()" id="login" name="login" action="login.html" >
-      <label><b style="color: aliceblue;">Username</b></label>
-      <input type="text" name="uname" id="uname" placeholder="Username"><span
-        style="color:red;font-size:15px;font-weight:500;" id="ename"></span>
-      <br><br>
-      <label><b style="color: aliceblue;">Password</b></label>
-      <input type="password" name="pass" id="pass" placeholder="Password"><span
-        style="color:red;font-size:15px;font-weight:500;" id="epass"></span>
-      <br><br>
-      <input type="submit" name="log" id="log" value="Log In Here" onclick="return pageRedirect()">
-      <br><br>
-      <!-- <input type="checkbox" id="check">
+    <br /><br />
+    <div class="login">
+      <form
+        onsubmit="return validate()"
+        id="login"
+        name="login"
+        action="login.html"
+      >
+        <label><b style="color: aliceblue">Username</b></label>
+        <input
+          type="text"
+          name="uname"
+          id="uname"
+          placeholder="Username"
+        /><span
+          style="color: red; font-size: 15px; font-weight: 500"
+          id="ename"
+        ></span>
+        <br /><br />
+        <label><b style="color: aliceblue">Password</b></label>
+        <input
+          type="password"
+          name="pass"
+          id="pass"
+          placeholder="Password"
+        /><span
+          style="color: red; font-size: 15px; font-weight: 500"
+          id="epass"
+        ></span>
+        <br /><br />
+        <input
+          type="submit"
+          name="log"
+          id="log"
+          value="Log In Here"
+          onclick="return pageRedirect()"
+        />
+        <br /><br />
+        <!-- <input type="checkbox" id="check">
       <span>Remember me</span> -->
-      <br><br>
-      <a style="color: aliceblue;" href="#">Forgot Password?</a>
-    </form>
-  </div>
-</body>
-
+        <br />
+        <a style="color: aliceblue" href="#">Forgot Password?</a>
+      </form>
+    </div>
+  </body>
 </html>
