--- a/login.html
+++ b/login.html
@@ -57,7 +57,7 @@
         <!-- <input type="checkbox" id="check">
       <span>Remember me</span> -->
         <br />
-        <a style="color: aliceblue" href="#" onclick="alert('Security Question ')">Forgot Password?</a>
+        <!-- <a style="color: aliceblue" href="#" onclick="alert('Security Question ')">Forgot Password?</a> -->
       </form>
     </div>
   </body>
