--- a/student.html
+++ b/student.html
@@ -99,10 +99,11 @@
             </button>
           </div>
           <div class="modal-body">
-            <p></p>
+            
             <p class="text-dark">Congratulations! You’ve run the course and passed the exams! There are no secret of success. It is the result of preparation, hard work and learning from failure. Well done!
-              <p class="paragraph"><span class="bg-success p-2 rounded"> Marks :- 92.19 </span><br><br><span style="padding-left: 250px;color: black;">Love from JALGAON❤️</span></p>
-            </p>
+              <p class="paragraph"><span class="bg-success p-2 rounded"> Marks :- 92.19 </span><br><br>
+                <!-- <span style="padding-left: 250px;color: black;">Love from JALGAON❤️</span> -->
+              </p>
           </div>
           <div class="modal-footer">
             <input type="button" class="btn btn-default" data-dismiss="modal" value="Close" />
