--- a/tform.html
+++ b/tform.html
@@ -45,6 +45,7 @@
 
         input[type=text],
         input[type=password],
+        input[type=email],
         textarea {
             width: 100%;
             padding: 15px;
@@ -55,7 +56,8 @@
         }
 
         input[type=text]:focus,
-        input[type=password]:focus {
+        input[type=password]:focus,
+        input[type=email]:focus {
             background-color: rgb(101, 218, 247);
             outline: none;
         }
@@ -95,14 +97,13 @@
             </center>
             <hr>
             <label> Firstname </label>
-            <input type="text" style="border-radius:7px" name="firstname" placeholder="Firstname" size="10" required />
+            <input type="text" style="border-radius:7px" name="firstname" placeholder="Firstname" pattern="[A-Za-z]{3,10}" required />
             <label> Middlename: </label>
-            <input type="text" style="border-radius:7px" name="middlename" placeholder="Middlename" size="10"
-                required />
+            <input type="text" style="border-radius:7px" name="middlename" placeholder="Middlename" pattern="[A-Za-z]{3,10}" required/>
             <label> Lastname: </label>
-            <input type="text" style="border-radius:7px" name="lastname" placeholder="Lastname" size="10" required />
+            <input type="text" style="border-radius:7px" name="lastname" placeholder="Lastname" pattern="[A-Za-z]{3,10}" required />
             <label> Username </label>
-            <input type="text" style="border-radius:7px" name="username" placeholder="Username" size="10" required />
+            <input type="text" style="border-radius:7px" name="username" placeholder="Username" pattern="[A-Za-z]{3,10}" required />
             <div>
                 <label style="margin-left: 20%;">
                     Subject :
@@ -133,13 +134,13 @@
             <label>
                 Phone :
             </label>
-            <input type="text" style="border-radius:7px" name="phone" placeholder="Phone no." size="10" / required>
+            <input type="text" style="border-radius:7px" name="phone" placeholder="Phone no." pattern="[0-9]{10}" / required>
             Current Address :
             <textarea style="border-radius:7px" cols="80" rows="5" placeholder="Current Address" value="address"
                 required>
 </textarea>
             <label for="email"><b>Email</b></label>
-            <input type="text" style="border-radius:7px" placeholder="Enter Email" name="email" required>
+            <input type="email" style="border-radius:7px" placeholder="Enter Email" name="email" required>
 
             <label for="psw"><b>Password</b></label>
             <input type="password" style="border-radius:7px" placeholder="Enter Password" name="psw" required>
