--- a/teacher.html
+++ b/teacher.html
@@ -91,7 +91,7 @@
           </div>
           <div class="modal-body">
             <p>Add Notice Below</p>
-            <p class="text-warning">
+            <p class="text-warning d-flex">
               <textarea style="border-radius: 7px" cols="68" rows="5" placeholder="Current Address" id="address"
                 required></textarea>
             </p>
